dodaj sekcje kostaryka

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@ body{
 
 <section>
     <h2>Panama</h2>
+    <img src="https://cdn.pixabay.com/photo/2019/08/06/12/15/beach-4388225_1280.jpg" alt="Panama">
+</section>
+
+<section class="kostaryka">
+
+    <h2>Kostaryka</h2>
+    <img src="https://cdn.pixabay.com/photo/2018/05/29/20/27/cataract-3440001_1280.jpg" alt="Costa Rica">
+
 </section>
 
 </body>
