dodaj opis sekcji kostaryka

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body{
 
     <h2>Kostaryka</h2>
     <img src="https://cdn.pixabay.com/photo/2018/05/29/20/27/cataract-3440001_1280.jpg" alt="Costa Rica">
+<p>Kostaryka to ojczyzna leniwców - zmiana z brancha Kostaryka</p>
 
 </section>
 
