dodaj sekcje honduras

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@ body{
 
     <h2>Kostaryka</h2>
     <img src="https://cdn.pixabay.com/photo/2018/05/29/20/27/cataract-3440001_1280.jpg" alt="Costa Rica">
-<<<<<<< HEAD
     <p>Leniwiec to symbol Kostaryki - zmiana z main</p>
-=======
 <p>Kostaryka to ojczyzna leniwców - zmiana z brancha Kostaryka</p>
->>>>>>> kostaryka
+
+</section>
+
+<section class="honduras">
+
+<h2>Honduras</h2>
+<img src="https://cdn.pixabay.com/photo/2015/11/07/17/49/honduras-1032398_1280.jpg" alt="honduras">
 
 </section>
 
